k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kubejs-server

spec:
  ports:
    - port: 9012
      targetPort: 9012
      protocol: TCP
      name: kubejs-server
  selector:
    app: kubejs-server
