k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubejs-server
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
    - host: cf.mdreal.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubejs-server
                port:
                  number: 9012
